# CodingTran

./: .gitignore  CMakeLists.txt  README.md
AlgorithmMuke/02-Sorting-Basic/01-Selection-Sort/: main.cpp
AlgorithmMuke/02-Sorting-Basic/02-Selection-Sort-Using-Templete/: Student.h  UsingTemplete.cpp
AlgorithmMuke/util/: Evaluate.h  EvaluateUtil.h  MatrixUtil.h  PrintUtil.h  RandMatrix.h
AlgorithmsInC/chapt01/: 1_1.c  1_2.c  1_3.cpp  getch.c  minibatchsgd.cpp  sgd.cpp  wc.c
CodingCPP/: CodingCPP.sln
CodingCPP/CodingCPP/: BinarySearch.cpp  CodingCPP.vcxproj  CodingCPP.vcxproj.filters  DayNumber.cpp  FreopenTest.cpp  HelloWorld.cpp  InsertionSort.cpp  LowBound.cpp  MulMatrix.cpp  OJscanf.cpp  PrimeTest.cpp  ScanfTest.cpp  SelectionSort.cpp  Strstr.cpp  divide.cpp  main.cpp  main.h  test.txt
PekingCplus/FirstWeek/: .vimrc  a_plus_b  a_plus_b.cc  output_sample_pic  output_sample_pic.cc  output_second_number  output_second_number.cc  secret_s  secret_s.cc  secret_s_temp  secret_s_temp.cc  sizeof_float  sizeof_float.cc  sizeof_number  sizeof_number.cc  translate_ascii  translate_ascii.cc  translate_number_to_ascii  translate_number_to_ascii.cc
cplusprimer/chapt01/: 1.10.cpp  1_11.cpp  1_8.cpp  1_9.cpp  ex_1_4_3.cpp
cplusprimer/chapt02/: 2_17.cpp
cplusprimer/chapt03/: 3.10.cpp  3.11.cpp  3_14.cpp  3_15.cpp  3_2.cpp  3_23.cpp  3_2_1.cpp  3_30.cpp  3_32.cpp  3_35.cpp  3_4.cpp  3_4_1.cpp  3_5.cpp  3_6.cpp  quicmi.cpp
cplusprimer/chapt04/: 4_10.cpp  4_11.cpp
cplusprimer/chapt05/: 5_14.cpp
cplusprimer/chapt06/: 6_9.cpp
cplusprimer/chapt06/function/: 6_10.cpp  (+8 more)
(+14 files in other folders)
